resolve content overflow issue on mobile devices in keyboard shortcuts modal

--- a/client/styles/components/_keyboard-shortcuts.scss
+++ b/client/styles/components/_keyboard-shortcuts.scss
@@ -2,7 +2,7 @@
   padding: #{20 / $base-font-size}rem;
   margin-right: #{20 / $base-font-size}rem;
   padding-bottom: #{40 / $base-font-size}rem;
-  width: #{450 / $base-font-size}rem;
+  max-width: #{500 / $base-font-size}rem;
   overflow-y: auto;
 }
 
@@ -24,6 +24,7 @@
   text-align: right;
   margin-right: #{10 / $base-font-size}rem;
   padding: #{3 / $base-font-size}rem;
+  min-inline-size: max-content;
   @include themify {
     border: 1px solid getThemifyVariable("button-border-color");
     border-radius: 3px;
